[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardtracker"
version = "0.1.0"
description = "Local price comp tracker and value predictor for sports and Pokemon cards"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.16",
    "streamlit>=1.30",
    "pandas>=2.0",
    "plotly>=5.18",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
cardtracker = "cardtracker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
